--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -27,7 +27,7 @@ jobs:
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: test-artifacts
+        name: ${{ github.actor }}-${{ github.sha }}-artifacts
         path: tests/.artifacts/*.html
         include-hidden-files: true
         retention-days: 90
